Version 0.0.1 - Initial Release
	Capability to distinguish commands from normal chat.
	Capability to both send and recieve data from twitch irc servers.
	Capability to add any number of responses or commands.

Version 0.0.2 - Added Functionality
	Simple spam filter added.

Version 0.0.3 - Bug Fixes
	Must run with python3 in terminal.
	Fixed !Boop command.
	Fixed spam filter to actually work and added more tests.
	Minor fixes to the !Boop command and the Welcome command.

Version 0.0.4 - Looping Mechanism Updated
	Added more spam checks.
	Removed possibly problematic symbology.
	Changed loop such that the loop continues while checking socket.

Version 0.0.5 - Bug Fixes
	Even more spam checks.
	Fixed command system.
	Added functionality for timers.
	Set up list for chat elements.

Version 0.0.6 - Implementation of Timer System
	New timers can be created now.
	Altered the chatCommand sections to work with timers.
	Simplified chatCommand systems.
	Changed PingPong function to work with Timers.
	Changed checkCommandType to work with Timers.
	
Version 0.0.7 - Chat Logging
	To Do:
	Add more sockets and make it cycle through them.
	Done:
	Fix command system. (change it to check for mods on a timer)
	Preliminary logging, will now log sent and recieved msg's and errors.

Version 0.0.8 - Implementation of Follower Notification System
	To Do:
	Move from using channelName to botName.(maybe?)
	Add functionality to the spam filter.
	Allow each type of response to be toggled.

Version 0.0.9 - 
	To Do:
	Move from using hard coded commands to using a json answer file.
	Make it where timed events can occur based on json answer file.
	Add functionality to timer class to count number of lines since last call.

Version 0.1.0 - Basic User Interface
	To Do:
	Be able to start, stop, silence the bot from the interface.
	Be able to add and remove commands and timed commands.
	Be able to open help files, error logs, link to donate.
	
Be able to close the program.
	