@@ -1,4 +1,5 @@
 *~
 config*
 NomLog.txt
+SirLog.txt
 Source/__pycache__
